# todo_phase2

./: .gitignore  CONSTITUTION.md  DEPLOYMENT-GUIDE.md  PLAN.md  QUICK-SETUP.bat  README.md  SPECIFICATION.md  SUBMISSION-CHECKLIST.md  TESTING-GUIDE.md  TROUBLESHOOTING.md  VERIFY-SETUP.md  api.py  docker-compose.yml  main.py  render.yaml  run-docker-compose.bat  setup-and-test.bat  setup-docker.bat  setup.py  temp_secret.env
backend/: .env.example  Dockerfile  README.md  install-deps.bat  pyproject.toml  test-deps.py  test-import.py
backend/src/: config.py  database.py  main.py
backend/src/dependencies/: __init__.py  auth.py  database.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/routers/: __init__.py  tasks.py
backend/src/schemas/: __init__.py  auth.py  task.py
backend/src/utils/: __init__.py  jwt.py
backend/tests/: __init__.py  conftest.py  test_tasks.py
frontend/: .env.local.example  Dockerfile  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: use-voice.ts
frontend/src/lib/: api.ts  auth-client.ts  auth-context.tsx  auth-guard.tsx  auth.ts  language-context.tsx  translations.ts
specs/phase2/: implementation-plan.md  section1-backend-fastapi-sqlmodel.md
src/todo_app/: __init__.py  cli.py  manager.py  models.py
